# datashield-workspace

./: Dockerfile  Makevars.system  README.md  environment.yaml  pyproject.toml
.github/workflows/: build-push-image.yaml
marimo-server-proxy/: marimo_proxy.py  pyproject.toml
